--- a/static/style.css
+++ b/static/style.css
@@ -29,7 +29,7 @@
             height: 400px;
             background-size: cover;
             background-position: center;
-            background-image: url("https://wunder.pages.dev/static/site/home.webp");
+            background-image: url("/static/site/fractal-maths.png");
             filter: grayscale(100%);
         }
 
